--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "discord notification functionality",
   "main": "main.js",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
